--- a/src/index.scss
+++ b/src/index.scss
@@ -351,6 +351,10 @@ body {
     height: auto;
   }
 
+  .map-address {
+    display: none;
+  }
+
   .settings-container {
     height: auto;
     flex-direction: column;
